build/openshift-pipelines/pipeline-uat.yaml
apiVersion: v1
kind: List
metadata: {}
items:
- apiVersion: v1
  kind: BuildConfig
  metadata:
    name: hello-openshift
  spec:
    source:
      git:
        ref: master
        uri: https://github.com/radu-obreja/HelloOpenshift.git
      type: Git
    strategy:
      type: JenkinsPipeline
      jenkinsPipelineStrategy:
        jenkinsfilePath: build/configurations/Jenkinsfile-UI
- apiVersion: v1
  kind: BuildConfig
  metadata:
    name: hello-openshift-artist
  spec:
    source:
      git:
        ref: master
        uri: https://github.com/radu-obreja/HelloOpenshift.git
      type: Git
    strategy:
      type: JenkinsPipeline
      jenkinsPipelineStrategy:
        jenkinsfilePath: build/configurations/Jenkinsfile-Artist
- apiVersion: v1
  kind: BuildConfig
  metadata:
    name: hello-openshift-movie
  spec:
    source:
      git:
        ref: master
        uri: https://github.com/radu-obreja/HelloOpenshift.git
      type: Git
    strategy:
      type: JenkinsPipeline
      jenkinsPipelineStrategy:
        jenkinsfilePath: build/configurations/Jenkinsfile-Movie
- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: hello-openshift-config
  data:
    hello_openshift_datasource_uri: mysql://mysql.mood.svc:3306
    hello_openshift_datasource_database: hello-openshift
    hello_openshift_datasource_username : root
    hello_openshift_datasource_password : k4hvd
    hello_openshift_apps_datasource_uri: mysql://mysql.mood.svc:3306
    hello_openshift_apps_datasource_database: hello-openshift-apps
    hello_openshift_apps_datasource_username : root
    hello_openshift_apps_datasource_password : k4hvd
- apiVersion: v1
  kind: Route
  metadata:
    name: hello-openshift
  spec:
    host: hello-openshift-uat.kube.moodnet.eu
    to:
      kind: Service
      name: hello-openshift
    port:
      targetPort: 8080-tcp
    wildcardPolicy: None
- apiVersion: v1
  kind: Route
  metadata:
    name: hello-openshift-artist
  spec:
    host: hello-openshift-uat.kube.moodnet.eu
    path: "/api/artist"
    to:
      kind: Service
      name: hello-openshift-artist
    port:
      targetPort: 8080-tcp
    wildcardPolicy: None
- apiVersion: v1
  kind: Route
  metadata:
    name: hello-openshift-movie
  spec:
    host: hello-openshift-uat.kube.moodnet.eu
    path: "/api/movie"
    to:
      kind: Service
      name: hello-openshift-movie
    port:
      targetPort: 8080-tcp
    wildcardPolicy: None
